dim background pattern

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -18,7 +18,7 @@
     min-height: 100vh;
     margin: 0;
     padding: 1em;
-    background-image: repeating-radial-gradient(#bebebe, #bebebe 1px, transparent 1px, transparent 100%);
+    background-image: repeating-radial-gradient(#ddd, #ccc 1px, transparent 1px, transparent 100%);
     background-size: 8px 8px;
   }
   @media (min-width: 36em) {
